codex-rs/tui2/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h1.snap
---
source: tui/src/chatwidget/tests.rs
# tui2/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h1.snap
expression: terminal.backend()
---
"                                        "
