codex-rs/tui2/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h2.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
# tui2/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h2.snap
---
"                                        "
"                                        "
